@@ -16,6 +16,7 @@ import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Objects;
 
 public final class WebCrawlerMain {
@@ -37,16 +38,25 @@ public final class WebCrawlerMain {
 
     CrawlResult result = crawler.crawl(config.getStartPages());
     CrawlResultWriter resultWriter = new CrawlResultWriter(result);
-    // TODO: Write the crawl results to a JSON file (or System.out if the file name is empty)
-    try {
-      Path path = Objects.requireNonNull(Path.of(config.getResultPath()));
+
+    if (!config.getResultPath().isEmpty()) {
+      Path path = Paths.get(config.getResultPath());
       resultWriter.write(path);
-    }catch (NullPointerException e){
-      Writer writer = new OutputStreamWriter(System.out);
-      resultWriter.write(writer);
+    } else {
+      Writer bufferedWriter = new OutputStreamWriter(System.out);
+      resultWriter.write(bufferedWriter);
+      bufferedWriter.flush();
+      bufferedWriter.close();
     }
 
-    // TODO: Write the profile data to a text file (or System.out if the file name is empty)
+    if (!config.getProfileOutputPath().isEmpty()) {
+      Path path = Paths.get(config.getProfileOutputPath());
+      profiler.writeData(path);
+    } else {
+      Writer bufferedWriter = new OutputStreamWriter(System.out);
+      profiler.writeData(bufferedWriter);
+      bufferedWriter.flush();
+    }
   }
 
   public static void main(String[] args) throws Exception {
